// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              节点可高亮
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              节点可多选高亮
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              整个节点可点击
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tree t-tree--hoverable t-tree--transition"
  >
    暂无数据
  </div>
</DocumentFragment>
`;

exports[`checkable.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              可选
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              严格模式
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item t-form-item__valueMode"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              选中值模式
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <div
                class="t-radio-group t-size-m t-radio-group__outline"
              >
                <label
                  class="t-radio t-is-checked"
                >
                  <input
                    checked=""
                    class="t-radio__former"
                    type="radio"
                    value="onlyLeaf"
                  />
                  <span
                    class="t-radio__input"
                  />
                  <span
                    class="t-radio__label"
                  >
                    onlyLeaf
                  </span>
                </label>
                <label
                  class="t-radio"
                >
                  <input
                    class="t-radio__former"
                    type="radio"
                    value="parentFirst"
                  />
                  <span
                    class="t-radio__input"
                  />
                  <span
                    class="t-radio__label"
                  >
                    parentFirst
                  </span>
                </label>
                <label
                  class="t-radio"
                >
                  <input
                    class="t-radio__former"
                    type="radio"
                    value="all"
                  />
                  <span
                    class="t-radio__input"
                  />
                  <span
                    class="t-radio__label"
                  >
                    all
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`controlled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          checked:
        </span>
        <div
          class="t-input__wrap"
          value="1.1.1.1, 1.1.1.2"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="1.1.1.1, 1.1.1.2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          expanded:
        </span>
        <div
          class="t-input__wrap"
          value="1, 1.1, 1.1.1, 2"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="1, 1.1, 1.1.1, 2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          actived:
        </span>
        <div
          class="t-input__wrap"
          value="2"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="2"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              是否禁用
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-is-disabled t-tree--hoverable t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`empty.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--transition"
      >
        😊 空数据（string）
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--transition"
      >
        <div>
          😊 空数据（ empty props ）
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expand-all.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 150px;"
          >
            <label>
              切换数据
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 150px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 150px;"
          >
            <label>
              提供 hover 状态
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 150px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 150px;"
          >
            <label>
              展开动画
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 150px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`expand-level.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tree t-tree--hoverable t-tree--transition"
  >
    暂无数据
  </div>
</DocumentFragment>
`;

exports[`expand-mutex.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              互斥展开
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 120px;"
          >
            <label>
              整个节点可点击
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 120px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`filter.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          filter:
        </span>
        <div
          class="t-input__wrap"
          value=""
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition t-tree--block-node"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3>
        render 1:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3>
        render 2:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`label.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tree t-tree--transition"
  >
    暂无数据
  </div>
</DocumentFragment>
`;

exports[`lazy.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tree t-tree--hoverable t-tree--transition"
  >
    暂无数据
  </div>
</DocumentFragment>
`;

exports[`line.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <form
        class="t-form"
      >
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              显示连线
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="t-form__item"
        >
          <div
            class="t-form__label t-form__label--right"
            style="width: 100px;"
          >
            <label>
              显示图标
            </label>
          </div>
          <div
            class="t-form__controls"
            style="margin-left: 100px;"
          >
            <div
              class="t-form__controls-content"
            >
              <button
                class="t-switch t-is-checked t-size-m"
                role="switch"
                type="button"
              >
                <span
                  class="t-switch__handle"
                />
                <div
                  class="t-switch__content"
                />
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3>
        render
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`load.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tree t-tree--hoverable t-tree--transition"
  >
    暂无数据
  </div>
</DocumentFragment>
`;

exports[`operations.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3
        class="title"
      >
        render:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3
        class="title"
      >
        api:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="operations"
      >
        <form
          class="t-form"
        >
          <div
            class="t-form__item"
          >
            <div
              class="t-form__label t-form__label--right"
              style="width: 200px;"
            >
              <label>
                插入节点使用高亮节点
              </label>
            </div>
            <div
              class="t-form__controls"
              style="margin-left: 200px;"
            >
              <div
                class="t-form__controls-content"
              >
                <button
                  class="t-switch t-size-m"
                  role="switch"
                  type="button"
                >
                  <span
                    class="t-switch__handle"
                  />
                  <div
                    class="t-switch__content"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="t-form__item"
          >
            <div
              class="t-form__label t-form__label--right"
              style="width: 200px;"
            >
              <label>
                子节点展开触发父节点展开
              </label>
            </div>
            <div
              class="t-form__controls"
              style="margin-left: 200px;"
            >
              <div
                class="t-form__controls-content"
              >
                <button
                  class="t-switch t-size-m"
                  role="switch"
                  type="button"
                >
                  <span
                    class="t-switch__handle"
                  />
                  <div
                    class="t-switch__content"
                  />
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="operations"
      >
        <div
          class="t-input-adornment t-input-adornment--prepend"
        >
          <span
            class="t-input-adornment__prepend"
          >
            filter:
          </span>
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="请输入"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3
        class="title"
      >
        api:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px; flex-wrap: wrap;"
      >
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取 value 为 'node1' 的单个节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取所有节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点的所有子节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取所有高亮节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点下的选中节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              插入一个根节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点的父节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点的所有父节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点在子节点中的位置
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              选中高亮节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              展开高亮节点
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              获取高亮节点与其子节点的数据
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`state.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3
        class="title"
      >
        state:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--hoverable t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3
        class="title"
      >
        api:
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="operations"
      >
        <button
          class="t-button t-button--theme-primary t-button--variant-base"
          type="button"
        >
          <span
            class="t-button__text"
          >
            插入一个根节点
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`sync.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          checked:
        </span>
        <div
          class="t-input__wrap"
          value="{1.1.1.1}, {1.1.1.2}"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="{1.1.1.1}, {1.1.1.2}"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          expanded:
        </span>
        <div
          class="t-input__wrap"
          value="{1}, {1.1}, {1.1.1}, {2}"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="{1}, {1.1}, {1.1.1}, {2}"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-input-adornment t-input-adornment--prepend"
      >
        <span
          class="t-input-adornment__prepend"
        >
          actived:
        </span>
        <div
          class="t-input__wrap"
          value="{2}"
        >
          <div
            class="t-input t-size-m t-align-left t-is-default"
          >
            <input
              class="t-input__inner"
              placeholder="请输入"
              type="text"
              value="{2}"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tree t-tree--checkable t-tree--transition"
      >
        暂无数据
      </div>
    </div>
  </div>
</DocumentFragment>
`;
